# audio-recorder-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs
src/recorder/: common.rs  constants.rs  errors.rs  get_default_device.rs  helpers.rs  macos_utils.rs  mod.rs  multiple_w_resampler.rs  multiple_wo_resampler.rs  record_multiple_spawner.rs  record_single_device.rs
src/recorder_v2/: constants.rs  errors.rs  get_default_device.rs  macros.rs  mod.rs  multiple_w_resampler.rs  record_multiple_spawner.rs  record_single_device.rs
tests/: record_multiple.rs  record_single.rs
