[package]
name = "audio-recorder-rs"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Moretti <daniel.morettiv@gmail.com>"]
description = "Cross platform system audio / microphone recording library in Rust"
publish = true
repository = "https://github.com/DrSh4dow/audio-recorder-rs"
homepage = "https://github.com/DrSh4dow/audio-recorder-rs"
license = "MIT"
readme = "README.md"
keywords = ["audio", "recorder", "stream", "audio-stream", "lib"]

[dependencies]
cpal = { git = "https://github.com/Kree0/cpal.git", branch = "master" }
crossbeam-channel = "0.5.15"
dasp_sample = "0.11.0"
num-traits = "0.2.19"
ringbuf = "0.4.8"
rubato = "0.16.2"
tracing = "0.1.41"

[dev-dependencies]
hound = "3.5.1"
tracing-test = "0.2.5"
